fix: remove deprecated word-wrap

--- a/source/sass/component/_calendar.scss
+++ b/source/sass/component/_calendar.scss
@@ -602,7 +602,6 @@
     -ms-flex-line-pack: center;
     align-content: center;
     font-size: 18px;
-    word-wrap: break-word;
     word-break: break-word;
 }
 /* stylelint-enable */
